added updated swagger
